# SolidBankCLI

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  README.md  coverage.functions.html  coverage.html  run.bat  run.sh
SolidBankCLI/: LICENSE  README.md
SolidBankCLI/include/: transaction.h
include/: AccountUtils.h  TransactionLog.h  UserManager.h  bank.h  transaction.h  utils.h
src/: TransactionLog.cpp  UserManager.cpp  bank.cpp  main.cpp  transaction.cpp  utils.cpp
tests/: test_bank.cpp
